# research

./: .gitignore  GITHUB_PAGES_SETUP.md  README.md  generate_index.py  index.html  manifest.json  sw.js
LFS/: README.md  notes.md  package.json  wrangler.toml
anki-git/: README.md  __init__.py  _summary.md  config.json  config.md  manifest.json  notes.md
automerge/: README.md  _summary.md  app.js  index.html  notes.md
github-action-summaries/: README.md  _summary.md  generate_index.py  notes.md  update-readme.yml
gmail-client/: .env.example  README.md  _summary.md  notes.md  package.json  server.js
grammarly/: README.md  _summary.md  api.js  app.js  index.html  notes.md  styles.css  tests.html  tests.js
incontext-lite-web/: README.md  _summary.md  index.html  notes.md
is-my-lifestyle-inflating/: README.md  _summary.md  data_template.json  example_data.json  index.html  lifestyle_tracker.py  notes.md
mac-state/: ContentView.swift  Info.plist  MacStateApp.swift  Package.swift  README.md  SimpleMonitor.swift  SystemStateMonitor.swift  _summary.md  build.sh  check-screen-recording.sh  create-app-bundle.sh  install-swift6.sh  notes.md
mech-lite/: README.md  notes.md  package-lock.json  package.json
mechabellum-lite/: README.md  _summary.md  index.html  notes.md
mechs/: README.md  index.html  notes.md  package-lock.json  package.json  vite.config.js  wrangler.toml
reader-v2/: README.md  (+3 more)
slack-collector/: .env.template  README.md  _summary.md  collector.py  config.py  database.py  notes.md  pyproject.toml  send_dm.py  send_to_alex.sh  slack_messages.db
(+156 files in other folders)
